fix: spacing, font

--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -23,6 +23,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  gap: 50px;
 }
 
 .aboutImage {
@@ -46,7 +47,7 @@
   padding: 25px;
   background-image: linear-gradient(
     90deg,
-    rgba(165, 215, 232, 0.42) 0%,
+    rgba(232, 165, 207, 0.42) 0%,
     rgba(255, 255, 255, 0) 100%
   );
   background-size: 0 100%;
